--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -6,12 +6,14 @@
 /* Définir la police par défaut pour le corps du texte */
 body {
     font-family: 'Roboto', sans-serif;
+    font-size: 14px; /* Taille de police globale */
     background-color: #f0f4f8; /* Fond gris clair */
     color: #333; /* Texte gris foncé */
     margin: 0;
     padding: 0;
     line-height: 1.6;
 }
+
 
 /* Définir les polices des titres avec Open Sans */
 h1, h2, h3, h4, h5, h6 {
@@ -62,6 +64,7 @@ button:hover {
 /* Style pour les cartes (card) */
 .card {
     background-color: white;
+    font-size: 14px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     margin: 20px;
     padding: 20px;
@@ -94,6 +97,7 @@ form {
 }
 
 form input, form select, form textarea {
+    font-size: 14px;
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
@@ -118,15 +122,18 @@ form button {
 }
 
 .table-sm td, .table-sm th {
+    font-size: 14px;
     padding: 0.25rem;  /* Réduit la taille des espaces internes */
 }
 
 .table-responsive {
+    font-size: 14px;
     margin-top: 20px;
     overflow-x: auto;
 }
 
 .table th, .table td {
+    font-size: 14px;
     vertical-align: middle;  /* Aligne le texte au centre verticalement */
 }
 
@@ -137,4 +144,112 @@ h1.text-primary {
 #limit {
     height: auto; /* Laisse le navigateur ajuster la hauteur en fonction du contenu */
 }
+
+/* Style personnalisé pour les boutons radio */
+.custom-radio {
+    border: 4px solid #ccc;  /* Bordure grise quand non coché */
+    background-color: #070606; /* Fond beige clair */
+    border-radius: 50%;      /* Garder la forme arrondie des radios */
+    width: 25px;             /* Taille du bouton radio */
+    height: 25px;            /* Taille du bouton radio */
+    background-color: white; /* Fond blanc pour un contraste plus élevé */
+    display: inline-block;
+    position: relative;
+    margin-right: 10px;      /* Espacement plus large entre les radios */
+    transition: border-color 0.3s, background-color 0.3s; /* Transition douce */
+}
+
+.custom-radio::before {
+    border: 4px solid #0c0808;  /* Bordure grise quand non coché */
+    background-color: #070606; /* Fond beige clair */
+    border-radius: 50%;      /* Garder la forme arrondie des radios */
+    width: 25px;             /* Taille du bouton radio */
+    height: 25px;            /* Taille du bouton radio */
+    background-color: white; /* Fond blanc pour un contraste plus élevé */
+    display: inline-block;
+    position: relative;
+    margin-right: 10px;      /* Espacement plus large entre les radios */
+    transition: border-color 0.3s, background-color 0.3s; /* Transition douce */
+}
+
+/* Quand le bouton radio est coché */
+.custom-radio:checked {
+    background-color: #007bff;  /* Fond bleu lorsque sélectionné */
+    border-color: #0056b3;      /* Bordure bleue plus foncée quand coché */
+}
+
+/* Cercle intérieur du bouton radio */
+.custom-radio:after {
+    content: '';
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 15px;                /* Taille plus grande pour le cercle intérieur */
+    height: 15px;
+    background-color: white;    /* Couleur du centre du bouton radio */
+    border-radius: 50%;
+    transition: background-color 0.3s; /* Transition douce pour le cercle intérieur */
+}
+
+/* Quand le bouton radio est coché, le cercle intérieur devient bleu */
+.custom-radio:checked:after {
+    background-color: white;    /* Maintien du cercle intérieur blanc même lorsqu'il est coché */
+}
+
+.custom-checkbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .custom-checkbox input[type="checkbox"] {
+    order: 2;
+    margin-bottom: 5px; /* Ajustez la marge selon vos besoins */
+  }
+  
+  .custom-checkbox label {
+    order: 1;
+    margin-top: 5px; /* Ajustez la marge selon vos besoins */
+  }
+  
+  .custom-checkbox input[type="checkbox"] {
+    /* Styles pour masquer la checkbox native */
+    position: absolute;
+    opacity: 0;
+  }
+  
+  .custom-checkbox label {
+    position: relative;
+    padding-left: 25px; /* Ajustez le padding selon vos besoins */
+    cursor: pointer;
+  }
+  
+  .custom-checkbox label::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20px; /* Ajustez la taille selon vos besoins */
+    height: 20px; /* Ajustez la taille selon vos besoins */
+    border: 2px solid #000; /* Couleur de la bordure */
+    background-color: #f01313; /* Couleur de fond */
+  }
+  
+  .custom-checkbox input[type="checkbox"]:checked + label::before {
+    background: linear-gradient(to bottom right, darken(#2f5d85, 20%) 50%, white 50%);
+    border-color: darken(#428bca, 20%);
+    border: 2px solid #000; /* Couleur de la bordure */
+  }
+  
+  .custom-checkbox label::after {
+    content: "";
+    position: absolute;
+    top: 6px; /* Ajustez la position selon vos besoins */
+    left: 6px; /* Ajustez la position selon vos besoins */
+    width: 8px; /* Ajustez la taille selon vos besoins */
+    height: 8px; /* Ajustez la taille selon vos besoins */
+    background-color: #fff; /* Couleur de la coche */
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+  }
 
